k8s/service.yaml
apiVersion: v1
kind: Service
meta
  name: timesheet-service
spec:
  type: NodePort
  selector:
    app: timesheet
  ports:
  - port: 8082
    targetPort: 8082
    nodePort: 30082
